fix play/pause spacing

--- a/webclient/src/styles/bootstrap_overrides.scss
+++ b/webclient/src/styles/bootstrap_overrides.scss
@@ -9,7 +9,7 @@
 .container {
   overflow: hidden;
   padding-top: 30px;
-  padding-bottom: 30px;
+  padding-bottom: 42px;
   padding-left: 20px;
   padding-right: 20px;
   height: 100vh;
